Fixed Overflow & Disable Scaling

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@ pre {
 .app {
   min-height: 100vh;
   transition: 0.2s;
+  overflow-x: hidden;
 }
 
 .app.dark-mode {
